Improve/extend filter UI/functionality

--- a/src/app.html
+++ b/src/app.html
@@ -9,8 +9,8 @@
 		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="%sveltekit.assets%/base.css" rel="stylesheet" />
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1914457754037184"
-     crossorigin="anonymous"></script>
+		<link href="%sveltekit.assets%/common.css" rel="stylesheet" />
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1914457754037184" crossorigin="anonymous"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
